[package]
name = "neptune"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neptune"

[features]

no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = [] }
mpl-token-metadata = "4.1.2"
mpl-token-auth-rules = { version = "1.5.0", features = ["no-entrypoint"] }
# crypto-hash = "0.3.4"
# pyth-sdk-solana = "0.10.1"
solana-program = "1.16.0"
